--- a/Desktop/Github/index.html
+++ b/Desktop/Github/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h1>10 lệnh git cơ bản mà developer nào cũng cần biết</h1>
+    <h2>10 lệnh git cơ bản mà developer nào cũng cần biết</h2>
+    <h3>hướng dẫn sử dụng git và các câu lệnh git cơ bản</h3>
 </body>
 
 </html>
